[tool.poetry]
name = "third-downloader"
version = "0.1.0"
description = ""
authors = ["MrMohebi <MMMohebi@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mysql = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
